Auth module configured(service, guard) and primeng, toasts

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+<div class="card flex justify-content-center align-items-center h-full">
+    <form [formGroup]="loginForm" (ngSubmit)="loginUser()">
+        <p-card header="Login" [style]="{width: '25rem'}">
+            <div class="field">
+                <label for="email">Email</label>
+                <input type="text" pInputText formControlName="email" name="email" placeholder="type your email"
+                    class="w-full" />
+                @if(email.invalid && email.dirty || email.touched){
+                <small class="block p-error">
+                    @if(email.errors?.['required']){
+                    <div> Email is required</div>
+                    }
+                    @if(email.errors?.['email']){
+                    <div> Email should be valid</div>
+                    }
+                </small>
+                }
+            </div>
+
+            <div class="field">
+                <label for="password">Password</label>
+                <input type="password" pInputText formControlName="password" name="password"
+                    placeholder="type your password" class="w-full" />
+                @if(password.invalid && password.dirty || password.touched){
+                <small class="block p-error">
+                    @if(password.errors?.['required']){
+                    <div> Password is required</div>
+                    }
+                </small>
+                }
+            </div>
+
+            <p-button type="submit" label="Sign In" styleClass="w-full" [disabled]="loginForm.invalid"></p-button>
+            <div class="mt-2">
+                Not a member? <a routerLink="/register">Register</a>
+            </div>
+        </p-card>
+    </form>
+</div>
