--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -10,5 +10,10 @@
     </a>|
     <a class="button" routerLink="login" routerLinkActive="activebutton" ariaCurrentWhenActive="page">
         Login
-    </a>
+    </a>|
+    <a class="button" routerLink="register" routerLinkActive="activebutton" ariaCurrentWhenActive="page">
+        Register
+    </a>|
+    <p-button label="Sign out" (onClick) = "logOut()"></p-button>
+    
 </nav>
